--- a/index.html
+++ b/index.html
@@ -1,56 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokemon</title>
+    <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="./Css/main.css">
 </head>
+
 <body>
-<!-- Header start -->
+    <!-- HEADER START -->
     <header class="site-header">
         <div class="container">
-            <div class="site-header__wrapper">
-                <a class="site-header__logo" href="./index.html">
-                    <img class="site-header___logo-img" src="" alt="" width="" height="">
-
+            <div class="site-header__wrapper mt-5 mb-7 d-flex justify-content-center align-items-center">
+                <a class="site-header__logo mx-3 d-block " href="./index.html">
+                    <img class="site-header___logo-img" src="./images/logo/pokemon_logo.svg" alt="Pokemon" width="610"
+                        height="225">
                 </a>
-                <nav class="site-nav">
-                    <ul class="site-nav__list">
-                        <li class="site-nav__item">
-                            <a class="site-nav__link" href="#"></a>
-                        </li>
-                        <li class="site-nav__item">
-                            <a class="site-nav__link" href="#"></a>
-                        </li>
-                        <li class="site-nav__item">
-                            <a class="site-nav__link" href="#"></a>
-                        </li>
-                    </ul>
-                </nav>
+                <a class="site-header__likes" href="#">
+                    <img class="site-header__like" src="./images/logo/like.svg" alt="like" width="42" height="35">
+                </a>
             </div>
         </div>
     </header>
-    <!-- Header end -->
+    <!-- HEADER END -->
 
-    <!-- Main start -->
+    <!-- MAIN START -->
     <main class="site-main">
-        <div class="container">
+        <!-- QUESTION SECTION START -->
+        <section class="question-section">
+            <div class="container">
+                <div class="question-section__wrapper ">
+                    <form class="question-section__form d-flex justify-content-around align-items-center"
+                        action="https://echo.htmlacademy.ru/courses" method="get">
+                        <select class="question-section__select bg-white text-black" name="question" id="question">
+                            <option value="0">Gross</option>
+                            <option value="1">Gross-1</option>
+                            <option value="2">Gross-2</option>
+                            <option value="3">Gross-3</option>
+                            <option value="4">Gross-4</option>
+                        </select>
+                        <input class="question-section__input bg-white text-black" type="search" name="search"
+                            minlength="5" placeholder="Search" required>
+                        <select class="question-section__select bg-white text-black" name="question" id="question">
+                            <option value="0">Aa-Zz</option>
+                            <option value="1">Aa-Zz-1</option>
+                            <option value="2">Aa-Zz-2</option>
+                            <option value="3">Aa-Zz-3</option>
+                            <option value="4">Aa-Zz-4</option>
+                        </select>
+                        <button class="btn bg-white question-section__btn text-black" type="submit">Button</button>
+                    </form>
 
-        </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- QUESTION SECTION END -->
+
+        <!-- CARDS SECTION START  -->
+        <section class="cards-section">
+            <h1 class="visually-hidden">
+                Pokemonlar sayti
+            </h1>
+            <h2 class="visually-hidden">
+                Pokemonlarning eng zo'r sayti
+            </h2>
+            <h3 class="visually-hidden">
+                Pokemonlar sayti
+            </h3>
+            <div class="container">
+                <ul class="d-flex  align-items-center flex-wrap cards-section__list">
+                    <li class="card cards-section__item bg-white">
+                        <img class="card-img-top" src="./images/Pokemon-img.png"
+                            srcset="./images/Pokemon-img.png 1x, ./images/Pokemon-img@2x.png 2x" alt="Pokemon"
+                            width="157" height="157">
+                        <div class="card-body pb-0">
+                            <h4 class="card-title text-black">
+                                Pokemons
+                            </h4>
+                            <p class="card-text text-black ">
+                                Grass, Poison
+                            </p>
+                            <div class="d-flex pokemon-about">
+                                <p class="card-wight text-black">
+                                    6.9 kg
+                                </p>
+                                <p class="card-age text-black ">
+                                    99 age
+                                </p>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="card cards-section__item bg-white">
+                        <img class="card-img-top" src="./images/Pokemon-img.png"
+                            srcset="./images/Pokemon-img.png 1x, ./images/Pokemon-img@2x.png 2x" alt="Pokemon"
+                            width="157" height="157">
+                        <div class="card-body pb-0">
+                            <h4 class="card-title text-black">
+                                Pokemons
+                            </h4>
+                            <p class="card-text text-black ">
+                                Grass, Poison
+                            </p>
+                            <div class="d-flex pokemon-about">
+                                <p class="card-wight text-black">
+                                    6.9 kg
+                                </p>
+                                <p class="card-age text-black ">
+                                    99 age
+                                </p>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="card cards-section__item bg-white">
+                        <img class="card-img-top" src="./images/Pokemon-img.png"
+                            srcset="./images/Pokemon-img.png 1x, ./images/Pokemon-img@2x.png 2x" alt="Pokemon"
+                            width="157" height="157">
+                        <div class="card-body pb-0">
+                            <h4 class="card-title text-black">
+                                Pokemons
+                            </h4>
+                            <p class="card-text text-black ">
+                                Grass, Poison
+                            </p>
+                            <div class="d-flex pokemon-about">
+                                <p class="card-wight text-black">
+                                    6.9 kg
+                                </p>
+                                <p class="card-age text-black ">
+                                    99 age
+                                </p>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="card cards-section__item bg-white">
+                        <img class="card-img-top" src="./images/Pokemon-img.png"
+                            srcset="./images/Pokemon-img.png 1x, ./images/Pokemon-img@2x.png 2x" alt="Pokemon"
+                            width="157" height="157">
+                        <div class="card-body pb-0">
+                            <h4 class="card-title text-black">
+                                Pokemons
+                            </h4>
+                            <p class="card-text text-black ">
+                                Grass, Poison
+                            </p>
+                            <div class="d-flex pokemon-about">
+                                <p class="card-wight text-black">
+                                    6.9 kg
+                                </p>
+                                <p class="card-age text-black ">
+                                    99 age
+                                </p>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="card cards-section__item bg-white">
+                        <img class="card-img-top" src="./images/Pokemon-img.png"
+                            srcset="./images/Pokemon-img.png 1x, ./images/Pokemon-img@2x.png 2x" alt="Pokemon"
+                            width="157" height="157">
+                        <div class="card-body pb-0">
+                            <h4 class="card-title text-black">
+                                Pokemons
+                            </h4>
+                            <p class="card-text text-black ">
+                                Grass, Poison
+                            </p>
+                            <div class="d-flex pokemon-about">
+                                <p class="card-wight text-black">
+                                    6.9 kg
+                                </p>
+                                <p class="card-age text-black ">
+                                    99 age
+                                </p>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="card cards-section__item bg-white">
+                        <img class="card-img-top" src="./images/Pokemon-img.png"
+                            srcset="./images/Pokemon-img.png 1x, ./images/Pokemon-img@2x.png 2x" alt="Pokemon"
+                            width="157" height="157">
+                        <div class="card-body pb-0">
+                            <h4 class="card-title text-black">
+                                Pokemons
+                            </h4>
+                            <p class="card-text text-black ">
+                                Grass, Poison
+                            </p>
+                            <div class="d-flex pokemon-about">
+                                <p class="card-wight text-black">
+                                    6.9 kg
+                                </p>
+                                <p class="card-age text-black ">
+                                    99 age
+                                </p>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="card cards-section__item bg-white">
+                        <img class="card-img-top" src="./images/Pokemon-img.png"
+                            srcset="./images/Pokemon-img.png 1x, ./images/Pokemon-img@2x.png 2x" alt="Pokemon"
+                            width="157" height="157">
+                        <div class="card-body pb-0">
+                            <h4 class="card-title text-black">
+                                Pokemons
+                            </h4>
+                            <p class="card-text text-black ">
+                                Grass, Poison
+                            </p>
+                            <div class="d-flex pokemon-about">
+                                <p class="card-wight text-black">
+                                    6.9 kg
+                                </p>
+                                <p class="card-age text-black ">
+                                    99 age
+                                </p>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="card cards-section__item bg-white">
+                        <img class="card-img-top" src="./images/Pokemon-img.png"
+                            srcset="./images/Pokemon-img.png 1x, ./images/Pokemon-img@2x.png 2x" alt="Pokemon"
+                            width="157" height="157">
+                        <div class="card-body pb-0">
+                            <h4 class="card-title text-black">
+                                Pokemons
+                            </h4>
+                            <p class="card-text text-black ">
+                                Grass, Poison
+                            </p>
+                            <div class="d-flex pokemon-about">
+                                <p class="card-wight text-black">
+                                    6.9 kg
+                                </p>
+                                <p class="card-age text-black ">
+                                    99 age
+                                </p>
+                            </div>
+                        </div>
+
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- CARDS SECTION END  -->
     </main>
 
-    <!-- Main end -->
-
-    <!-- Footer start -->
-    <footer class="site-footer">
-        <div class="container">
-
-        </div>
-
-    </footer>
-    <!-- Footer end -->
+    <!-- MAIN END -->
 
 
+    <script src="./bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
